--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Ich bin eine GitHub Page für ein Repository
+<html>
+<head>
+  <title>GitHub Page Test</title>
+</head>
+<body>
+  <h1>Ich bin eine GitHub Page für ein Repository</h1>
+</body>
+</html>
