--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
   <title>GitHub Page Test</title>
+  <style>
+    body{
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 <body>
   <h1>Ich bin eine GitHub Page für ein Repository</h1>
