--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <html>
 <head>
-  <title>GitHub Page Test</title>
-  <style>
-    body{
-      font-family: sans-serif;
-    }
-  </style>
+	<title>GitHub Page Test</title>
+	<style>
+		body{
+			font-family: sans-serif;
+		}
+	</style>
 </head>
 <body>
-  <h1>Ich bin eine GitHub Page für ein Repository</h1>
+	<h1>GitHub Pages</h1>
+
+	<h3>Account</h3>
+
+	<ul>
+		<li>Ein Repository mit dem Namen [username].github.io erstellen.</li>
+		<li>Website auf den master pushen.</li>
+	</ul>
+
+	<h3>Repository</h3>
+	<ul>
+		<li>Einen eigenen Branch für die Website erstellen</li>
+		<li>Alles unnötige aus diesem löschen.</li>
+		<li>In den Settings des Repositorys diesen Branch für die GitHub Page auswählen.</li>
+		<li>Website auf diesen Branch pushen.</li>
+	</ul>
+
 </body>
 </html>
