--- a/index.html
+++ b/index.html
@@ -2,28 +2,34 @@
 <head>
 	<title>GitHub Page Test</title>
 	<style>
-		body{
+		body {
 			font-family: sans-serif;
+		}
+		
+		page {
+			display: table;
+			margin: 40px auto;
 		}
 	</style>
 </head>
 <body>
-	<h1>GitHub Pages</h1>
+	<div class="page">
+		<h1>GitHub Pages</h1>
 
-	<h3>Account</h3>
+		<h3>Account</h3>
 
-	<ul>
-		<li>Ein Repository mit dem Namen [username].github.io erstellen.</li>
-		<li>Website auf den master pushen.</li>
-	</ul>
+		<ul>
+			<li>Ein Repository mit dem Namen [username].github.io erstellen.</li>
+			<li>Website auf den master pushen.</li>
+		</ul>
 
-	<h3>Repository</h3>
-	<ul>
-		<li>Einen eigenen Branch für die Website erstellen</li>
-		<li>Alles unnötige aus diesem löschen.</li>
-		<li>In den Settings des Repositorys diesen Branch für die GitHub Page auswählen.</li>
-		<li>Website auf diesen Branch pushen.</li>
-	</ul>
-
+		<h3>Repository</h3>
+		<ul>
+			<li>Einen eigenen Branch für die Website erstellen</li>
+			<li>Alles unnötige aus diesem löschen.</li>
+			<li>In den Settings des Repositorys diesen Branch für die GitHub Page auswählen.</li>
+			<li>Website auf diesen Branch pushen.</li>
+		</ul>
+	</div>
 </body>
 </html>
